--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "cd .. & husky install ./api"
+    "prepare": "cd .. & husky install ./api",
+    "format": "prettier --write ."
   },
   "keywords": [
     "api",
@@ -21,6 +22,20 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "husky": "^9.0.11"
+    "eslint": "^9.1.1",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+      "*.js": [
+        "eslint — fix",
+        "prettier — write",
+        "git add"
+      ]
+    }
   }
 }
