--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^9.1.1",
