--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,13 @@
   "description": "meli challenge api",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "env-cmd -f ./envs/.env.dev node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "cd .. & husky install ./api",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "env-cmd -f ./envs/env.prod tsc",
+    "build:dev": "env-cmd -f ./envs/env.dev tsc -w",
+    "prepare-env": "cp ./envs/template.env envs/.env.dev && cp ./envs/template.env ./envs/.env.prod"
   },
   "keywords": [
     "api",
@@ -19,7 +22,9 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "env-cmd": "^10.1.0",
+    "express": "^4.19.2",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^9.1.1",
