--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
