--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "env-cmd -f ./envs/.env.dev node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "cd .. & husky install ./api",
     "format": "prettier --write .",
     "build": "env-cmd -f ./envs/env.prod tsc",
     "build:dev": "env-cmd -f ./envs/env.dev tsc -w",
@@ -21,27 +19,19 @@
   "author": "jafidiesel",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "express": "^4.19.2",
+    "helmet": "^5.1.1",
     "joi": "^17.13.1",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "eslint": "^9.1.1",
-    "husky": "^9.0.11",
-    "prettier": "^3.2.5"
+    "eslint": "8.43.0",
+    "prettier": "2.8.8"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    },
-    "lint-staged": {
-      "*.js": [
-        "eslint — fix",
-        "prettier — write",
-        "git add"
-      ]
-    }
+  "engines": {
+    "node": ">=12.0.0 <13.0.0"
   }
 }
