--- a/api/package.json
+++ b/api/package.json
@@ -20,16 +20,21 @@
   "author": "jafidiesel",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "express": "^4.19.2",
+    "helmet": "^5.1.1",
     "joi": "^17.13.1",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "eslint": "^9.1.1",
-    "prettier": "^3.2.5",
+    "eslint": "8.43.0",
+    "prettier": "2.8.8",
     "mocha": "^9.2.2",
     "nock": "^13.5.4"
+  },
+  "engines": {
+    "node": ">=12.0.0 <13.0.0"
   }
 }
