--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "dev": "PORT=3001 next dev",
     "build": "PORT=3001 next build",
     "start": "PORT=3001 next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -18,12 +19,17 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.77.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
